samples/_failures_safe/1761263633_4def0a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8fb15ab1.c: In function ‘main’:
./samples/SAFE/__tmp_8fb15ab1.c:137:9: error: ‘size’ undeclared (first use in this function)
  137 |         size
      |         ^~~~
./samples/SAFE/__tmp_8fb15ab1.c:137:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_8fb15ab1.c:137:13: error: expected ‘;’ at end of input
  137 |         size
      |             ^
      |             ;
./samples/SAFE/__tmp_8fb15ab1.c:137:9: error: expected declaration or statement at end of input
  137 |         size
      |         ^~~~
./samples/SAFE/__tmp_8fb15ab1.c:137:9: error: expected declaration or statement at end of input
